Fixes #3867: In MyRestyaboards iOS app, the users are not able to change the visibility of the organization issue fixed

--- a/client/css/custom-responsive.less
+++ b/client/css/custom-responsive.less
@@ -604,6 +604,11 @@
 				}
 			}
 		}	
+		.organization-visibility-form {
+			ul.dropdown-menu {
+				left: 7px !important;
+			}
+		}
 	}
 	.attachement-list {
 		float: none;
